--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     background-size: cover;
     text-align: center;
     color: rgb(9, 50, 130);
-    padding: 10px;
+    /* padding: 10px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -43,6 +43,15 @@
   .texto{    
     color: rgb(9, 50, 130);
     text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.541);       
+  }
+  .fondoTitle{
+    background-color: rgb(243, 243, 243);
+    color: rgb(9, 50, 130);    
+  }
+
+  .fondoPie{
+    color: rgb(166, 197, 247);
+
   }
 
   .quienes{
