--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ header .nav-link {
   font-weight: bold;  */
 }
 
-/* .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(150, 33, 63, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); } */
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(150, 33, 63, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
 
 .navbar-toggler:focus {
   border: none !important;
@@ -22,6 +22,11 @@ header .nav-link {
 
 .navbar-toggler {
   border: none !important; }
+
+.imagenAportes{
+  width: 50px;
+  height: 20px;
+}
 
 
 .barra.navbar{
